--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -5,10 +5,8 @@
 
     <data>
 
-        <import alias="def" type="sgtmelon.scriptum.model.annotation.Theme"/>
-
         <variable name="currentTheme" type="int"/>
-        <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
+        <variable name="notificationItem" type="sgtmelon.scriptum.model.NotificationItem"/>
 
     </data>
 
@@ -33,7 +31,7 @@
                     style="@style/Image.Color.Vertical.Start"
                     android:contentDescription="@null"
                     app:indicatorTheme='@{currentTheme}'
-                    app:indicatorColor='@{noteModel.noteEntity.color}'
+                    app:indicatorColor='@{notificationItem.note.color}'
                     tools:visibility="visible"/>
 
             <LinearLayout
@@ -49,7 +47,7 @@
                 <TextView
                         android:id="@+id/notification_name_text"
                         style="@style/Text.SmallCard.Title"
-                        android:text='@{noteModel.noteEntity.name}'
+                        android:text='@{notificationItem.note.name}'
                         tools:text="@string/preview_notification_name"/>
 
                 <TextView
@@ -57,7 +55,7 @@
                         style="@style/Text.SmallCard.Subtitle"
                         android:layout_marginEnd="@dimen/layout_4dp"
                         android:layout_marginRight="@dimen/layout_4dp"
-                        app:futureTime='@{noteModel.alarmEntity.date}'
+                        app:futureTime='@{notificationItem.alarm.date}'
                         tools:text="@string/preview_notification_date"/>
 
             </LinearLayout>
