Перенёс в другую директорию NotificationItem
Tag: #Refactor

--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable name="currentTheme" type="int"/>
-        <variable name="notificationItem" type="sgtmelon.scriptum.model.NotificationItem"/>
+        <variable name="notificationItem" type="sgtmelon.scriptum.model.item.NotificationItem"/>
 
     </data>
 
