Добавил I/RankRepo, ренейм rankItem -> rankEntity
Tag: #Refactor

--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <variable name="rankItem" type="sgtmelon.scriptum.room.entity.RankEntity"/>
+        <variable name="rankEntity" type="sgtmelon.scriptum.room.entity.RankEntity"/>
 
     </data>
 
@@ -54,7 +54,7 @@
                 <TextView
                         android:id="@+id/rank_name_text"
                         style="@style/Text.SmallCard.Title"
-                        android:text='@{rankItem.name}'
+                        android:text='@{rankEntity.name}'
                         tools:text="@string/preview_rank_name"/>
 
                 <LinearLayout
@@ -66,13 +66,13 @@
                             style="@style/Text.SmallCard.Subtitle"
                             android:layout_marginEnd="@dimen/layout_4dp"
                             android:layout_marginRight="@dimen/layout_4dp"
-                            android:text='@{@string/list_item_rank_text_count + " " + rankItem.getTextCount()}'
+                            android:text='@{@string/list_item_rank_text_count + " " + rankEntity.getTextCount()}'
                             tools:text="@string/preview_rank_text"/>
 
                     <TextView
                             android:id="@+id/rank_roll_count_text"
                             style="@style/Text.SmallCard.Subtitle"
-                            android:text='@{@string/list_item_rank_roll_count + " " + rankItem.getRollCount()}'
+                            android:text='@{@string/list_item_rank_roll_count + " " + rankEntity.getRollCount()}'
                             tools:text="@string/preview_rank_roll"/>
 
                 </LinearLayout>
