--- a/app/src/main/res/layout/view_rename.xml
+++ b/app/src/main/res/layout/view_rename.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/rename_parent_container"
         android:orientation="vertical"
         android:paddingLeft="@dimen/layout_24dp"
         android:paddingTop="@dimen/layout_16dp"
