--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -9,7 +9,7 @@
         <import type="sgtmelon.scriptum.R"/>
         <import alias="v" type="android.view.View"/>
 
-        <variable name="menuCallback" type="sgtmelon.scriptum.screen.callback.note.roll.RollNoteMenuCallback"/>
+        <variable name="menuCallback" type="sgtmelon.scriptum.screen.callback.note.roll.IRollNoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
