Написал пару тестов, убрал ненужные операции
Tag: #Test #Refactor

--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -35,6 +35,7 @@
                     tools:visibility="visible"/>
 
             <LinearLayout
+                    android:id="@+id/notification_content_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/layout_4dp"
