--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -9,6 +9,7 @@
         <import alias="v" type="android.view.View"/>
 
         <variable name="isListEmpty" type="boolean"/>
+        <variable name="isListHide" type="boolean"/>
 
     </data>
 
@@ -25,9 +26,9 @@
             <include
                     android:id="@+id/notes_info_include"
                     layout="@layout/include_info"
-                    app:details='@{R.string.info_notes_details}'
+                    app:details='@{isListHide ? R.string.info_hide_details : R.string.info_notes_details}'
                     app:icon='@{R.mipmap.img_info_notes}'
-                    app:title='@{R.string.info_notes_title}'/>
+                    app:title='@{isListHide ? R.string.info_hide_title : R.string.info_notes_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notes_recycler"
