--- a/app/src/main/res/values/strings_info.xml
+++ b/app/src/main/res/values/strings_info.xml
@@ -29,10 +29,12 @@
     <string name="info_notes_title">No created notes</string>
     <string name="info_bin_title">Bin is empty</string>
     <string name="info_notification_title">No notifications</string>
+    <string name="info_hide_title">You have hidden notes</string>
 
     <string name="info_rank_details">You can create category using field above</string>
     <string name="info_notes_details">You can create new note using plus button</string>
     <string name="info_bin_details">Deleted notes can be restored at any time</string>
     <string name="info_notification_details">You can create notification inside note</string>
+    <string name="info_hide_details">Use categories to display them</string>
 
 </resources>
