--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -26,9 +26,9 @@
             <include
                     android:id="@+id/notification_info_include"
                     layout="@layout/include_info"
-                    app:details='@{R.string.info_notification_details}'
+                    app:details='@{R.string.info_notification_empty_details}'
                     app:icon='@{R.mipmap.ic_launcher}'
-                    app:title='@{R.string.info_notification_title}'/>
+                    app:title='@{R.string.info_notification_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notification_recycler"
