--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -26,9 +26,9 @@
             <include
                     android:id="@+id/notes_info_include"
                     layout="@layout/include_info"
-                    app:details='@{isListHide ? R.string.info_hide_details : R.string.info_notes_details}'
+                    app:details='@{isListHide ? R.string.info_notes_hide_details : R.string.info_notes_empty_details}'
                     app:icon='@{R.mipmap.img_info_notes}'
-                    app:title='@{isListHide ? R.string.info_hide_title : R.string.info_notes_title}'/>
+                    app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/notes_recycler"
