--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -30,9 +30,9 @@
             <include
                     android:id="@+id/rank_info_include"
                     layout="@layout/include_info"
-                    app:details='@{R.string.info_rank_details}'
+                    app:details='@{R.string.info_rank_empty_details}'
                     app:icon='@{R.mipmap.img_info_rank}'
-                    app:title='@{R.string.info_rank_title}'/>
+                    app:title='@{R.string.info_rank_empty_title}'/>
 
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rank_recycler"
