--- a/app/src/main/res/values-ru/strings_info.xml
+++ b/app/src/main/res/values-ru/strings_info.xml
@@ -27,16 +27,16 @@
 
     <!--  -->
 
-    <string name="info_rank_title">Нет категорий</string>
-    <string name="info_notes_title">Нет созданных заметок</string>
-    <string name="info_bin_title">Корзина пуста</string>
-    <string name="info_notification_title">Нет уведомлений</string>
-    <string name="info_hide_title">У вас есть скрытые заметки</string>
+    <string name="info_rank_empty_title">Нет категорий</string>
+    <string name="info_notes_empty_title">Нет созданных заметок</string>
+    <string name="info_notes_hide_title">У вас есть скрытые заметки</string>
+    <string name="info_bin_empty_title">Корзина пуста</string>
+    <string name="info_notification_empty_title">Нет уведомлений</string>
 
-    <string name="info_rank_details">Вы можете создать категории при помощи поля сверху</string>
-    <string name="info_notes_details">Вы можете создать заметку при помощи кнопки с плюсом</string>
-    <string name="info_bin_details">Удалённые заметки можно в любой момент восстановить</string>
-    <string name="info_notification_details">Вы можете создать уведомление внутри заметки</string>
-    <string name="info_hide_details">Воспользуйтесь категориями, чтобы показать их</string>
+    <string name="info_rank_empty_details">Вы можете создать категории при помощи поля сверху</string>
+    <string name="info_notes_empty_details">Вы можете создать заметку при помощи кнопки с плюсом</string>
+    <string name="info_notes_hide_details">Воспользуйтесь категориями, чтобы показать их</string>
+    <string name="info_bin_empty_details">Удалённые заметки можно в любой момент восстановить</string>
+    <string name="info_notification_empty_details">Вы можете создать уведомление внутри заметки</string>
 
 </resources>
