Отделил callback'и для Ui классов
Tag: #Refactor

--- a/app/src/main/res/layout/include_text_note_panel.xml
+++ b/app/src/main/res/layout/include_text_note_panel.xml
@@ -10,7 +10,7 @@
         <import alias="v" type="android.view.View"/>
 
         <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.callback.note.text.ITextNoteMenu"/>
+                  type="sgtmelon.scriptum.screen.view.callback.note.text.ITextNoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
