--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -8,7 +8,7 @@
         <variable name="currentTheme" type="int"/>
 
         <variable name="menuCallback"
-                  type="sgtmelon.scriptum.screen.callback.note.roll.IRollNoteMenu"/>
+                  type="sgtmelon.scriptum.screen.view.callback.note.roll.IRollNoteMenu"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteModel" type="sgtmelon.scriptum.model.NoteModel"/>
