Rename const in @Theme
Tag: #Refactor

--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -74,7 +74,7 @@
                 android:id="@+id/toolbar_note_color_view"
                 style="@style/Image.Color.Horizontal"
                 app:visibleTheme='@{currentTheme}'
-                app:visibleOn='@{theme.dark}'
+                app:visibleOn='@{theme.DARK}'
                 tools:background="@color/note_red_dark"
                 tools:visibility="visible"/>
 
